# react-auditor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  release-please-config.json
.github/: dependabot.yml
.github/workflows/: audit-pr.yml  ci.yml  coverage.yml  nightly.yml  publish-cargo.yml  publish-homebrew.yml  publish-npm.yml  publish-vscode.yml  release-please.yml  release.yml
benches/: auditor_bench.rs
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  IMPROVEMENTS.md  PLAN.md  ROADMAP.md  RULES.md  USAGE.md  index.html  migration-from-eslint.md  playground.html
docs/rules/: README.md  a-has-content.md  aria-valid.md  button-has-type.md  click-events-have-key-events.md  complexity.md  consistent-component-naming.md  consistent-return.md  consistent-type-imports.md  explicit-return-type.md  heading-levels.md  hook-rules.md  html-has-lang.md  img-alt.md  jsx-no-duplicate-props.md  label-associated.md  lazy-load-components.md  max-params.md  no-ambiguous-labels.md  no-any.md  no-autofocus.md  no-bind-in-jsx.md  no-commented-code.md  no-console.md  no-dangerously-set-innerhtml.md  no-deep-nesting.md  no-direct-mutation.md  no-empty-blocks.md  no-empty-interface.md  no-eval.md  (+38 more)
fuzz/: Cargo.toml
homebrew/: react-auditor.rb
npm/: README.md  install.js  package.json  react-auditor  wrapper.js
src/: cache.rs  cli.rs  config.rs  docs.rs  init.rs  lib.rs  main.rs  presets.rs  scanner.rs  watch.rs
tests/: e2e_test.rs  formatter_test.rs  integration_test.rs  proptest_test.rs  scanner_test.rs
vscode/: .vscodeignore  LICENSE  README.md  extension.js  package.json  react-auditor.vsix
(+108 files in other folders)
