[package]
name = "react-auditor"
version = "0.1.4"
edition = "2024"
description = "A blazing-fast Rust CLI to scan JS/TS/React code for best practices, quality, and security issues."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
oxc_parser = "0.58"
oxc_allocator = "0.58"
oxc_ast = "0.58"
oxc_ast_visit = "0.58"
oxc_semantic = "0.58"
oxc_span = "0.58"
oxc_syntax = "0.58"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
globset = "0.4"
ignore = "0.4"
termcolor = "1.4"
indicatif = "0.17"
anyhow = "1"
thiserror = "2"
colored = "3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "auditor_bench"
harness = false
