[package]
name = "react-auditor"
version = "0.1.6"
edition = "2024"
description = "A blazing-fast Rust CLI to scan JS/TS/React code for best practices, quality, and security issues."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
oxc_parser = "0.138"
oxc_allocator = "0.138"
oxc_ast = "0.138"
oxc_ast_visit = "0.138"
oxc_semantic = "0.138"
oxc_span = "0.138"
oxc_syntax = "0.138"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
walkdir = "2"
globset = "0.4"
ignore = "0.4.27"
termcolor = "1.4"
indicatif = "0.18.6"
anyhow = "1"
rayon = "1"
notify = "8"
thiserror = "2"
colored = "3"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.11.0"

[[bench]]
name = "auditor_bench"
harness = false
